--- a/nginx/site/app/css/dashboard.css
+++ b/nginx/site/app/css/dashboard.css
@@ -1,102 +1,18 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
-}
-
-body {
-    background: seagreen;
-    display: flex;
-    flex-flow: column;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-}
-
-.menu-header {
-    display: flex;
-    flex-flow: row;
-    flex: 0 1 auto;
-    width: 100%;
-    background: #fff;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-}
-
-.menu-header-left {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    background: aqua;
-}
-
-.menu-header-left h1 {
-    font-size: 20px;
-    padding: 10px;
-    text-align: center;
-    font-weight: 400;
-}
-
-.menu-header-left #logo {
-    width: 45px;
-    height: 45px;
-    justify-content: center;
-    align-items: center;
-    margin-left: 10px;
-}
-
-.menu-header-right {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: red;
-    margin-left: auto;
-    padding-right: 20px;
-}
-
-.menu-header-right p {
-    font-size: 15px;
-    padding: 10px;
-    text-align: center;
-    font-weight: 300;
-}
-
-.menu-header-right .bx {
-    display: flex;
-    flex-flow: column;
-    font-size: 25px;
-    text-align: center;
-    padding: 5px;
-    color: black;
-}
-
-.menu-header-right .bx span {
-    font-size: 12px;
-    font-weight: 400;
-}
-
-.menu-header-right img {
-    width: 40px;
-    height: 40px;
-    margin-right: 10px;
-}
+@import url("pallette.css");
+@import url("header.css");
 
 .content {
     display: flex;
     flex-flow: column;
     flex: 1 1 auto;
     width: 100%;
-    background: darkslateblue;
+    background: var(--primary);
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
     padding-top: 5%;
     margin: auto;
 }
 
 .server-list-options {
-    background: mediumpurple;
     display: flex;
     flex-flow: row;
     flex: 0 1 auto;
@@ -104,62 +20,69 @@ body {
     width: 100%;
 }
 
-.vdivider {
-    border-left: 1px solid black;
-    border-right: 1px solid black;
-}
-
-.vdivider#profile-divider {
-    height: 45px;
-}
-
-.vdivider#servers-divider {
-    color: white;
-    height: 45px;
+.vertical-divider#servers-divider {
+    border: 1px solid var(--details);
+    height: 32px;
+    margin-bottom: 0;
+    padding-bottom: 0;
+    transform: translateY(-1px);
+    align-content: flex-start;
 }
 
 #search-bar {
     display: flex;
     flex-flow: row;
     height: 30px;
-    align-items: center;
     margin-right: auto;
+    transform: translateY(3px);
 }
 
 #search-bar input {
     width: 220px;
     background-color: transparent;
+    color: var(--details);
     border: none;
     outline: none;
     padding-right: 35px;
-    padding-left: 6px;
-    border-right: 1px solid white;
+    padding-left: 25px;
+    text-align: center;
 }
 
 #search-bar i {
-    transform: translate(210px);
+    color: var(--details);
+    transform: translate(210px, 8px);
 }
 
 ::placeholder {
+    text-align: center;
     padding: 10px;
+    color: inherit;
+}
+
+#search-bar input:focus::placeholder {
+    color: transparent;
 }
 
 .option-button {
-    background: limegreen;
+    background: #40ad4b;
+    font-size: 13px;
+    align-items: center;
+    text-align: center;
     border: none;
     outline: none;
-    border-radius: 10px;
-    color: whitesmoke;
+    border-radius: 5px;
+    color: var(--details);
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
     margin-right: 16px;
     margin-left: 20px;
-    padding-left: 5px;
-    padding-right: 5px;
+    margin-bottom: 2px;
+    padding: 5px;
+    cursor: pointer;
 }
 
 hr {
-    border-top: 1px white;
-    color: white;
+    border-top: 1px solid var(--details);
+    color: var(--details);
     width: 98%;
     height: 1px;
     margin: 1px auto auto;
@@ -171,14 +94,14 @@ hr {
     flex: 1 1 auto;
     flex-wrap: wrap;
     width: 100%;
-    background: rosybrown;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
     margin: auto;
 }
 
 #empty {
+    font-weight: 400;
     text-align: center;
     margin: auto;
-    font-size: 20px;
-    color: #4a4a4a;
+    font-size: 18px;
+    color: var(--details);
 }
