--- a/nginx/site/app/css/pallette.css
+++ b/nginx/site/app/css/pallette.css
@@ -10,6 +10,7 @@
     --header: #1e2934;
     --primary: #32404e;
     --secondary: #3e4d5b;
+    --tertiary: #32404E;
     --shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
 }
 
