--- a/nginx/site/app/css/pallette.css
+++ b/nginx/site/app/css/pallette.css
@@ -7,11 +7,15 @@
     font-family: "Poppins", sans-serif;
 
     --details: #cfcfcf;
+    --alternative-details: #e8e8e8;
     --header: #1e2934;
     --primary: #32404e;
     --secondary: #3e4d5b;
-    --tertiary: #32404E;
+    --tertiary: #2e3b47;
+    --quaternary: #495c6e;
     --shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+    --reds: #c94530;
+    --greens: #33d66f;
 }
 
 .vertical-divider {
