Finished most of the website, although servers can only be created and deleted, and that's still indev. Needs server permissions updating review.

--- a/nginx/site/app/css/console.css
+++ b/nginx/site/app/css/console.css
@@ -25,7 +25,7 @@ body {
     color: var(--details);
     padding: 5px;
     overflow-y: scroll;
-    flex-direction: column-reverse;
+    flex-direction: column;
 }
 
 data-server-id {
